--- a/src/components/common/DataTable/styles.less
+++ b/src/components/common/DataTable/styles.less
@@ -511,3 +511,16 @@
     background-color: @primary-color !important;
     border-color: @primary-color !important;
 }
+
+/* Hide Card Mode Overrides to align with modal edges */
+.data-table-wrapper.hide-card-mode {
+    .data-table-toolbar {
+        padding-left: 0 !important;
+        padding-right: 0 !important;
+    }
+
+    .main-table {
+        padding-left: 0 !important;
+        padding-right: 0 !important;
+    }
+}
