--- a/src/pages/Heritage/HeritageDetailPage/styles.less
+++ b/src/pages/Heritage/HeritageDetailPage/styles.less
@@ -179,6 +179,15 @@
             line-height: 1.3;
         }
 
+        .content-section-title {
+            font-family: 'Aleo', serif;
+            font-size: 26px;
+            margin-top: 32px;
+            margin-bottom: 24px;
+            color: #8b572a;
+            font-weight: 700;
+        }
+
         .article-body-content {
             font-family: 'Roboto', sans-serif; 
             font-size: 16px;
@@ -208,11 +217,58 @@
             }
             
             em {
-                font-size: 14px;
-                color: #888;
-                display: block;
-                text-align: right;
-                margin-top: 16px;
+                font-style: italic;
+                display: inline;
+                text-align: left;
+            }
+
+            // Wikipedia-style captions and thumbs
+            .thumb {
+                margin-bottom: 24px;
+                clear: both;
+                &.tright {
+                    float: right;
+                    margin-left: 24px;
+                }
+                &.tleft {
+                    float: left;
+                    margin-right: 24px;
+                }
+                .thumbinner {
+                    background: #f8f9fa;
+                    border: 1px solid #c8ccd1;
+                    padding: 3px;
+                    border-radius: 2px;
+                    
+                    .thumbcaption {
+                        padding: 8px;
+                        font-size: 13px;
+                        color: #54595d;
+                        line-height: 1.4;
+                        text-align: left;
+                    }
+                }
+            }
+        }
+
+        .references-section {
+            margin-top: 40px;
+            padding-top: 24px;
+            border-top: 1px solid #eee;
+
+            h3 {
+                font-family: 'Aleo', serif;
+                font-size: 26px;
+                margin-bottom: 16px;
+                color: #d4380d;
+                font-weight: 700;
+            }
+
+            .references-content {
+                font-family: 'Roboto', sans-serif;
+                font-size: 15px;
+                line-height: 1.6;
+                color: #555;
             }
         }
 
