--- a/src/pages/Exhibition/ExhibitionBrowsePage/styles.less
+++ b/src/pages/Exhibition/ExhibitionBrowsePage/styles.less
@@ -24,7 +24,8 @@
     text-align: center;
     color: white;
     padding: 100px 20px;
-    background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+    background: url("/images/Zero_home.png") no-repeat bottom center;
+    background-size: cover;
     margin-bottom: 0;
     position: relative;
 
